--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
         <!-- Left Column - Image -->
         <div class="flex-1">
           <img
-            src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80"
+            src="img/test/Client.webp"
             alt="Professional at work"
             class="w-full h-full object-cover rounded-2xl shadow-lg"
           />
@@ -215,7 +215,7 @@
         <!-- Right Column - Image -->
         <div class="flex-1">
           <img
-            src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&w=800&q=80"
+            src="img/girl4.png"
             alt="Professional at work"
             class="w-full h-full object-cover rounded-2xl shadow-lg"
           />
