--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
       </div>
 
       <div class="space-y-4">
-        <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
+        <h3 class="text-xl font-bold text-gray-900">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -254,7 +254,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -263,7 +263,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -272,7 +272,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Movers</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -281,11 +281,11 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Electrical help</span>
           </div>
         </div>
 
-        <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider mt-8">Popular on U Do</h3>
+        <h3 class="text-xl font-bold text-gray-900 mt-8">Popular on U Do</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -294,7 +294,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -303,7 +303,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -312,11 +312,11 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Movers</span>
           </div>
         </div>
 
-        <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider mt-8">Trending now</h3>
+        <h3 class="text-xl font-bold text-gray-900 mt-8">Trending now</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -325,7 +325,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -334,7 +334,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -343,7 +343,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Movers</span>
           </div>
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -352,7 +352,7 @@
               </svg>
             </button>
             <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Electrical help</span>
           </div>
         </div>
       </div>
