--- a/public/index.html
+++ b/public/index.html
@@ -244,8 +244,8 @@
         </button>
       </div>
 
-      <div class="space-y-4">
-        <h3 class="text-xl font-bold text-gray-900">Recent searches</h3>
+      <div>
+        <h3 class="text-xl font-bold text-gray-900 mb-2">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -285,7 +285,7 @@
           </div>
         </div>
 
-        <h3 class="text-xl font-bold text-gray-900 mt-8">Popular on U Do</h3>
+        <h3 class="text-xl font-bold text-gray-900 mt-12 mb-2">Popular on U Do</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
@@ -316,7 +316,7 @@
           </div>
         </div>
 
-        <h3 class="text-xl font-bold text-gray-900 mt-8">Trending now</h3>
+        <h3 class="text-xl font-bold text-gray-900 mt-12 mb-2">Trending now</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
