--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@
       <div>
         <h3 class="text-xl font-bold text-gray-900 mb-2">Recent searches</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -256,7 +256,7 @@
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -265,7 +265,7 @@
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -287,28 +287,28 @@
 
         <h3 class="text-xl font-bold text-gray-900 mt-12 mb-2">Popular on UDO</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Movers</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
@@ -318,38 +318,38 @@
 
         <h3 class="text-xl font-bold text-gray-900 mt-12 mb-2">Trending now</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Mount art or shelves</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Movers</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
           </div>
-          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-full flex">
+          <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[110px] flex items-center">
             <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Trending" class="w-[30%] h-full object-cover rounded-l-2xl" />
             <span class="text-gray-900 flex-1 text-center text-lg font-medium">Electrical help</span>
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
-              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
+              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24"></svg>
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
               </svg>
             </button>
