--- a/public/index.html
+++ b/public/index.html
@@ -285,11 +285,12 @@
           </div>
         </div>
 
+        
         <h3 class="text-xl font-bold text-gray-900 mt-12 mb-2">Popular on UDO</h3>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
           <div class="group bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden relative w-full h-[82.5px] flex items-center">
-            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Furniture assembly</span>
+            <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?w=1600&h=600&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover rounded-l-2xl" />
+            <span class="text-gray-900 flex-1 text-center text-lg font-medium">Food</span>
             <button class="absolute top-1/2 -translate-y-1/2 right-0 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
               <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
