--- a/public/index.html
+++ b/public/index.html
@@ -421,7 +421,7 @@
         <!-- Company Info -->
         <div>
           <h3 class="text-2xl font-bold mb-4">
-            <span class="text-orange-500">U</span><span class="text-white">DO</span>
+            <span class="text-orange-500">U</span><span class="text-white">DO™</span>
           </h3>
           <p class="text-gray-400 text-sm leading-relaxed">
             Connect with verified professionals for any task. No middleman, no hidden fees, just quality service you can trust.
@@ -457,6 +457,7 @@
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Terms of Service</a></li>
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Privacy Policy</a></li>
             <li><a href="#" class="text-gray-400 hover:text-orange-500 transition">Cookie Policy</a></li>
+            <li><a href="trademark/" class="text-gray-400 hover:text-orange-500 transition">Trademark</a></li>
           </ul>
         </div>
 
@@ -481,8 +482,8 @@
       <!-- Social Media & Copyright -->
       <div class="border-t border-gray-800 mt-10 pt-8 flex flex-col md:flex-row justify-between items-center">
         <p class="text-gray-400 text-sm mb-4 md:mb-0">
-          © 2024 U Do. All rights reserved.
-        </p
+          © 2026 U Do. All rights reserved.
+        </p>
         <div class="flex space-x-6">
           <a href="#" class="text-gray-400 hover:text-orange-500 transition">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
