--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -197,7 +197,52 @@
             </div>
         </div>
 
+
         <!-- Banner 2 -->
+
+        <section class="w-full rounded-xl border border-gray-200 bg-white p-6 md:p-10 shadow-sm">
+  
+  <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
+    
+    <div class="flex items-start gap-4">
+      <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
+        </div>
+      <div class="flex flex-col gap-1">
+        <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">We know just the table</h2>
+        <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">
+          For the holidays. On a weeknight. Find meals for every occasion.
+        </p>
+      </div>
+    </div>
+
+    <div class="flex items-start gap-4">
+      <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
+        </div>
+      <div class="flex flex-col gap-1">
+        <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">Our Delicious Promise</h2>
+        <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">
+          If your experience isn't what you expected, we're here to help—we’ll always aim to make it right.
+        </p>
+      </div>
+    </div>
+
+    <div class="flex items-start gap-4">
+      <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
+        </div>
+      <div class="flex flex-col gap-1">
+        <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">Support for every seat</h2>
+        <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">
+          Real people. Real support. 24/7—whenever you host or pull up a chair.
+        </p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
+
+        <!-- Banner 3 -->
         <div class="relative w-full h-64 rounded-2xl overflow-hidden mb-6">
             <img src="https://images.unsplash.com/photo-15593393524-4d01160291c1?w=1200&h=400&fit=crop" alt="Chef Special" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-gradient-to-r from-orange-900 to-orange-600 bg-opacity-75 flex items-center">
@@ -209,7 +254,7 @@
             </div>
         </div>
 
-        <!-- Banner 3 --> 
+        <!-- Banner 4 --> 
          <div class="relative w-full h-[557px] rounded-2xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/g.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-[461px] mr-4 ml-16">
