--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -229,6 +229,31 @@
 
     <div class="flex items-start gap-4">
       <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
+  <svg 
+    viewBox="0 0 24 24" 
+    xmlns="http://www.w3.org/2000/svg" 
+    class="h-8 w-8"
+    fill="none" 
+    stroke="currentColor" 
+    stroke-width="1.5"
+  >
+    <path 
+      stroke-linecap="round" 
+      stroke-linejoin="round" 
+      d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" 
+    />
+    
+    <text 
+      x="50%" 
+      y="55%" 
+      text-anchor="middle" 
+      fill="currentColor" 
+      stroke-width="0"
+      style="font-family: sans-serif; font-weight: 800; font-size: 5px; letter-spacing: -0.2px;"
+    >
+      UDO
+    </text>
+  </svg>
         </div>
       <div class="flex flex-col gap-1">
         <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">Our Delicious Promise</h2>
