--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -200,7 +200,7 @@
 
         <!-- Banner 2 -->
 
-        <section class="w-full rounded-xl border border-gray-200 bg-white p-6 md:p-10 shadow-sm mt-12 mb-12">
+        <section class="w-full rounded-xl border border-gray-200 p-6 md:p-10 shadow-sm mt-12 mb-12" style="background-color: #EBF5FF;">
   
   <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
     
