--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -273,6 +273,20 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Carousel Navigation for Foods Section -->
+            <div class="flex justify-end items-center gap-2 mt-4 px-4">
+                <button onclick="document.querySelector('.scrollbar-hide').scrollBy({left: -300, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+                    </svg>
+                </button>
+                <button onclick="document.querySelector('.scrollbar-hide').scrollBy({left: 300, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7-7" />
+                    </svg>
+                </button>
+            </div>
         </div>
     </div>
 
