--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -192,7 +192,12 @@
         <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
             <!-- Card 1 -->
             <div class="flex-shrink-0 w-72 snap-center">
-                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden relative">
+                    <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-md hover:bg-gray-100 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                    </button>
                     <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="0">
                         <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=400&h=300&fit=crop" alt="Grilled Salmon 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1467003909585-2f8a72700288?w=400&h=300&fit=crop" alt="Grilled Salmon 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
@@ -212,7 +217,12 @@
 
             <!-- Card 2 -->
             <div class="flex-shrink-0 w-72 snap-center">
-                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden relative">
+                    <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-md hover:bg-gray-100 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                    </button>
                     <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="1">
                         <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Garlic Butter Shrimp 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1565680018434-b513d5e5fd47?w=400&h=300&fit=crop" alt="Garlic Butter Shrimp 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
@@ -232,7 +242,12 @@
 
             <!-- Card 3 -->
             <div class="flex-shrink-0 w-72 snap-center">
-                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden relative">
+                    <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-md hover:bg-gray-100 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                    </button>
                     <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="2">
                         <img src="https://images.unsplash.com/photo-1432139555190-58524dae6a55?w=400&h=300&fit=crop" alt="Lobster Tail 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=400&h=300&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
@@ -252,7 +267,12 @@
 
             <!-- Card 4 -->
             <div class="flex-shrink-0 w-72 snap-center">
-                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden relative">
+                    <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-md hover:bg-gray-100 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                    </button>
                     <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="3">
                         <img src="https://images.unsplash.com/photo-1626645738196-c2a7c87a8f58?w=400&h=300&fit=crop" alt="Seared Scallops 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Seared Scallops 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
@@ -272,7 +292,12 @@
 
             <!-- Card 5 -->
             <div class="flex-shrink-0 w-72 snap-center">
-                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden">
+                <div class="bg-white rounded-t-3xl rounded-b-lg shadow-lg overflow-hidden relative">
+                    <button class="absolute top-3 right-3 z-10 bg-white rounded-full p-2 shadow-md hover:bg-gray-100 transition-colors">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                    </button>
                     <div class="relative h-[13.5rem] overflow-hidden mini-carousel" data-card="4">
                         <img src="https://images.unsplash.com/photo-1626803775151-61d756612f97?w=400&h=300&fit=crop" alt="Grilled Octopus 1" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-100">
                         <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=400&h=300&fit=crop" alt="Grilled Octopus 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
