--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -219,19 +219,20 @@
             </div>
 
             <div class="mb-2">
-                <h3 class="text-base font-bold text-gray-900 truncate">Tacos Los Cholos</h3>
-                <p class="text-gray-500 text-sm">Philadelphia</p>
+                <h3 class="text-xl font-bold text-gray-900 truncate">Tacos Los Cholos</h3>
+                
+                <p class="text-black text-base">Philadelphia</p>
             </div>
 
             <div class="flex flex-col">
-                <span class="text-lg font-bold text-gray-900">$16</span>
-                <span class="text-xs text-gray-400">$30 for 2 orders</span>
+                <span class="text-xl font-bold text-gray-900">$16</span>
+                <span class="text-xs text-black">$30 for 2 orders</span>
                 
                 <div class="flex items-center text-green-600 mt-1">
                     <svg class="w-3.5 h-3.5 mr-1" fill="none" stroke="currentColor" stroke-width="3" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
                     </svg>
-                    <span class="text-xs font-medium">All fees included</span>
+                    <span class="text-xs font-medium text-green-700">All fees included</span>
                 </div>
             </div>
 
