--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -169,8 +169,8 @@
     <div class="text-left py-8 px-4 md:px-8 lg:px-16 xl:px-24">
         <div class="flex justify-between items-center">
             <div>
-                <h2 class="text-4xl font-bold text-gray-800 mb-2">Foods near you</h2>
-                <p class="text-xl text-gray-600">Tailored to your taste:</p>
+                <h2 class="text-4xl font-bold text-gray-800 mb-1">Foods near you</h2>
+                <p class="text-base text-gray-600">Tailored to your taste:</p>
             </div>
             <div class="flex gap-2">
                 <button onclick="document.querySelector('.scrollbar-hide').scrollBy({left: -300, behavior: 'smooth'})" class="bg-white border border-gray-200 hover:bg-gray-100 text-gray-700 p-2 rounded-full shadow-md transition-all">
