--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1636,47 +1636,49 @@
     <!-- Marketing Hero Banners -->
     <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
 
-          <!-- Banner 2 -->
-        <section class="w-full rounded-3xl border border-gray-200 px-6 py-4 md:px-10 md:py-6 shadow-sm mt-12 mb-12" style="background-color: #EBF5FF;">
-            <div class="grid grid-cols-1 gap-8 md:grid-cols-3">
-                <div class="flex items-start gap-4">
-                    <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
-                        <svg viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.3 2.955a3 3 0 0 1 3.4 0l6.867 4.72A1 1 0 0 1 21 8.5V19a2 2 0 0 1-2 2h-4.5a1 1 0 0 1-1-1v-5h-3v5a1 1 0 0 1-1 1H5a2 2 0 0 1-2-2V8.5a1 1 0 0 1 .433-.824L10.3 2.955zm2.266 1.648a1 1 0 0 0-1.133 0L5 9.026V19h3.5v-5a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5H19V9.026l-6.434-4.423z" />
-                        </svg>
-                    </div>
-                    <div class="flex flex-col gap-1">
-                        <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">We know just the table</h2>
-                        <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">For holidays. On a weeknight. Find meals for every occasion.</p>
-                    </div>
-                </div>
-
-                <div class="flex items-start gap-4">
-                    <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
-                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" stroke="currentColor" stroke-width="1.5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-                            <text x="50%" y="55%" text-anchor="middle" fill="currentColor" stroke-width="0" style="font-family: sans-serif; font-weight: 800; font-size: 5px; letter-spacing: -0.2px;">UDO</text>
-                        </svg>
-                    </div>
-                    <div class="flex flex-col gap-1">
-                        <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">Our Delicious Promise</h2>
-                        <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">If your experience isn't what you expected, we're here to help—we'll always aim to make it right.</p>
-                    </div>
-                </div>
-
-                <div class="flex items-start gap-4">
-                    <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white">
-                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-                        </svg>
-                    </div>
-                    <div class="flex flex-col gap-1">
-                        <h2 class="text-lg font-semibold text-gray-900 line-clamp-2">Support for every seat</h2>
-                        <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">Real people. Real support. 24/7—whenever you host or pull up a chair.</p>
-                    </div>
-                </div>
+        <section class="w-full rounded-3xl border border-gray-200 px-6 pt-2 pb-4 md:px-10 md:pt-4 md:pb-6 shadow-sm mt-6 mb-8" style="background-color: #EBF5FF;">
+    <div class="grid grid-cols-1 gap-6 md:grid-cols-3">
+        
+        <div class="flex items-start gap-4">
+            <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white mt-1">
+                <svg viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M10.3 2.955a3 3 0 0 1 3.4 0l6.867 4.72A1 1 0 0 1 21 8.5V19a2 2 0 0 1-2 2h-4.5a1 1 0 0 1-1-1v-5h-3v5a1 1 0 0 1-1 1H5a2 2 0 0 1-2-2V8.5a1 1 0 0 1 .433-.824L10.3 2.955zm2.266 1.648a1 1 0 0 0-1.133 0L5 9.026V19h3.5v-5a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5H19V9.026l-6.434-4.423z" />
+                </svg>
             </div>
-        </section>
+            <div class="flex flex-col gap-0">
+                <h2 class="text-lg font-semibold text-gray-900 line-clamp-2 leading-snug">We know just the table</h2>
+                <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">For holidays. On a weeknight. Find meals for every occasion.</p>
+            </div>
+        </div>
+
+        <div class="flex items-start gap-4">
+            <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white mt-1">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" stroke="currentColor" stroke-width="1.5">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                    <text x="50%" y="55%" text-anchor="middle" fill="currentColor" stroke-width="0" style="font-family: sans-serif; font-weight: 800; font-size: 5px; letter-spacing: -0.2px;">UDO</text>
+                </svg>
+            </div>
+            <div class="flex flex-col gap-0">
+                <h2 class="text-lg font-semibold text-gray-900 line-clamp-2 leading-snug">Our Delicious Promise</h2>
+                <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">If your experience isn't what you expected, we'll help make it right.</p>
+            </div>
+        </div>
+
+        <div class="flex items-start gap-4">
+            <div class="flex h-12 w-12 shrink-0 items-center justify-center rounded-full bg-blue-600 text-white mt-1">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                </svg>
+            </div>
+            <div class="flex flex-col gap-0">
+                <h2 class="text-lg font-semibold text-gray-900 line-clamp-2 leading-snug">Support for every seat</h2>
+                <p class="text-sm text-gray-600 line-clamp-4 leading-relaxed">Real people. Real support. 24/7—whenever you host or pull up a chair.</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
 
         <!-- Banner 1 -->
